--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     ],
     "devDependencies": {
         "@types/styled-components": "^4.1.4",
+        "prettier": "^1.15.3",
         "styled-components": "^4.1.3",
+        "tslint": "^5.12.0",
         "tslint-react": "^3.6.0"
     }
 }
