--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "not op_mini all"
     ],
     "devDependencies": {
+        "@types/redux": "^3.6.0",
         "@types/styled-components": "^4.1.4",
         "prettier": "^1.15.3",
         "styled-components": "^4.1.3",
