--- a/package.json
+++ b/package.json
@@ -3,21 +3,19 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@types/jest": "23.3.11",
-        "@types/node": "10.12.18",
-        "@types/react": "16.7.18",
-        "@types/react-dom": "16.0.11",
         "normalize.css": "^8.0.1",
         "react": "^16.7.0",
         "react-dom": "^16.7.0",
         "react-scripts": "2.1.3",
-        "typescript": "3.2.2"
+        "react-test-renderer": "^16.7.0"
     },
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "tslint-check": "tslint-config-prettier-check ./tslint.json",
+        "prettier": "prettier"
     },
     "eslintConfig": {
         "extends": "react-app"
@@ -29,8 +27,40 @@
         "not op_mini all"
     ],
     "devDependencies": {
+        "@types/enzyme": "^3.1.15",
+        "@types/enzyme-to-json": "^1.5.2",
+        "@types/jest": "23.3.11",
+        "@types/node": "10.12.18",
+        "@types/react": "16.7.18",
+        "@types/react-dom": "16.0.11",
         "@types/styled-components": "^4.1.4",
+        "enzyme": "^3.8.0",
+        "enzyme-adapter-react-16": "^1.7.1",
+        "enzyme-to-json": "^3.3.5",
         "styled-components": "^4.1.3",
-        "tslint-react": "^3.6.0"
+        "tslint": "^5.12.1",
+        "tslint-config-prettier": "^1.17.0",
+        "tslint-react": "^3.6.0",
+        "typescript": "3.2.2"
+    },
+    "jest": {
+        "collectCoverageFrom": [
+            "src/**/*.{js,jsx,ts,tsx}",
+            "!<rootDir>/node_modules/",
+            "!<rootDir>/path/to/dir/",
+            "!<rootDir>/src/serviceWorker.ts",
+            "!<rootDir>/src/index.tsx"
+        ],
+        "coverageThreshold": {
+            "global": {
+                "branches": 80,
+                "functions": 80,
+                "lines": 80,
+                "statements": 80
+            }
+        },
+        "snapshotSerializers": [
+            "enzyme-to-json/serializer"
+        ]
     }
 }
