--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@types/react-router-dom": "^4.3.1",
         "normalize.css": "^8.0.1",
         "react": "^16.7.0",
         "react-dom": "^16.7.0",
+        "react-router-dom": "^4.3.1",
         "react-scripts": "2.1.3",
         "react-test-renderer": "^16.7.0"
     },
