--- a/package.json
+++ b/package.json
@@ -33,12 +33,15 @@
         "@types/enzyme-to-json": "^1.5.2",
         "@types/jest": "23.3.11",
         "@types/node": "10.12.18",
+        "@types/prettier": "^1.15.2",
         "@types/react": "16.7.18",
         "@types/react-dom": "16.0.11",
         "@types/styled-components": "^4.1.4",
         "enzyme": "^3.8.0",
         "enzyme-adapter-react-16": "^1.7.1",
         "enzyme-to-json": "^3.3.5",
+        "prettier": "^1.16.1",
+        "prettier-tslint": "^0.4.2",
         "styled-components": "^4.1.3",
         "tslint": "^5.12.1",
         "tslint-config-prettier": "^1.17.0",
