--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
-        "test": "react-scripts test",
+        "test": "CI=true react-scripts test --env=jsdom",
         "eject": "react-scripts eject",
         "tslint-check": "tslint-config-prettier-check ./tslint.json",
-        "prettier": "prettier"
+        "tslint": "tslint --project tsconfig.json --config tslint.json"
     },
     "eslintConfig": {
         "extends": "react-app"
@@ -40,6 +40,7 @@
         "enzyme": "^3.8.0",
         "enzyme-adapter-react-16": "^1.7.1",
         "enzyme-to-json": "^3.3.5",
+        "husky": "^1.3.1",
         "prettier": "^1.16.1",
         "prettier-tslint": "^0.4.2",
         "styled-components": "^4.1.3",
