--- a/package.json
+++ b/package.json
@@ -69,5 +69,12 @@
         "snapshotSerializers": [
             "enzyme-to-json/serializer"
         ]
+    },
+    "prettier": {
+        "trailingComma": "es5",
+        "tabWidth": 4,
+        "semi": true,
+        "singleQuote": true,
+        "arrowParens": "always"
     }
 }
