Working on notifications.
Working on notifications.

Working on notifications.

Working on notification.

Working on notification.

Working on notification box.

Working on notification.

Working on notification.

Working on notification.

Working on notification box.

Working on notification box.

Function for handling page marking.

Working on notification.

Working on notification.

Function for handling page marking.

Working on notification.

Working on notification box

Working on notification.

Function for handling page marking.

Working on notification.

--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
         "tabWidth": 4,
         "semi": true,
         "singleQuote": true,
-        "arrowParens": "always"
+        "arrowParens": "always",
+        "printWidth": 120
     }
 }
