--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
     "private": true,
     "dependencies": {
         "@types/react-router-dom": "^4.3.1",
+        "formik": "^1.5.1",
         "immutable": "^4.0.0-rc.12",
         "normalize.css": "^8.0.1",
         "react": "^16.7.0",
         "react-dom": "^16.7.0",
         "react-router-dom": "^4.3.1",
         "react-scripts": "2.1.3",
-        "react-test-renderer": "^16.7.0"
+        "react-test-renderer": "^16.7.0",
+        "yup": "^0.27.0"
     },
     "scripts": {
         "start": "react-scripts start",
@@ -38,6 +40,7 @@
         "@types/react": "16.7.18",
         "@types/react-dom": "16.0.11",
         "@types/styled-components": "^4.1.6",
+        "@types/yup": "^0.26.12",
         "enzyme": "^3.8.0",
         "enzyme-adapter-react-16": "^1.7.1",
         "enzyme-to-json": "^3.3.5",
@@ -75,6 +78,7 @@
         "tabWidth": 4,
         "semi": true,
         "singleQuote": true,
-        "arrowParens": "always"
+        "arrowParens": "always",
+        "printWidth": 120
     }
 }
