--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "dependencies": {
         "@types/react-router-dom": "^4.3.1",
+        "formik": "^1.5.1",
         "immutable": "^4.0.0-rc.12",
         "normalize.css": "^8.0.1",
         "react": "^16.7.0",
