--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "react-dom": "^16.7.0",
         "react-router-dom": "^4.3.1",
         "react-scripts": "2.1.3",
-        "react-test-renderer": "^16.7.0"
+        "react-test-renderer": "^16.7.0",
+        "yup": "^0.27.0"
     },
     "scripts": {
         "start": "react-scripts start",
